--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,14 @@
+certifi==2018.4.16
+chardet==3.0.4
 Django==2.0.5
+googlemaps==2.5.1
+idna==2.6
+numpy==1.14.2
+pandas==0.22.0
+python-dateutil==2.7.3
 pytz==2018.4
+requests==2.18.4
+six==1.11.0
+urllib3==1.22
+xlrd==0.9.0
+XlsxWriter==1.0.4
